# audio_visualizer_player

./: .gitignore  .metadata  README.md  analyze_output.txt  pubspec.yaml  rewrite.py
.github/skills/audio_visualizer_player/: SKILL.md
android/: build.gradle  build.gradle.kts  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/audio_visualizer_player/: AudioVisualizerPlayerPlugin.kt
android/src/test/kotlin/com/example/audio_visualizer_player/: AudioVisualizerPlayerPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/audio_visualizer_player_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart  simple_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: audio_visualizer_player.podspec
lib/: audio_visualizer_player.dart  audio_visualizer_player_method_channel.dart  audio_visualizer_player_platform_interface.dart
lib/src/: audio_drop_region.dart  equalizer_controller.dart  fft_processor.dart  mav_native.dart  playback_transition.dart  player_controller.dart  player_controller_state.dart  player_models.dart  player_state_snapshot.dart  playlist_controller.dart  random_playback_manager.dart  visualizer_controller.dart  visualizer_player_controller.dart  visualizer_player_controller_playlist.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart  simple_api.dart
lib/src/rust/api/simple/: controller.dart  equalizer.dart  waveform.dart
linux/: CMakeLists.txt
macos/: audio_visualizer_player.podspec
native/include/: fft_utils.h  my_audio_visualizer_native.h
native/src/: fft_utils.cpp  my_audio_visualizer_native.cpp
native/third_part/soloud/include/: soloud.h
native/third_part/soloud/src/core/: soloud.cpp
rust/: Cargo.toml  main.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: simple.rs
rust/src/api/simple/: controller.rs  equalizer.rs  fft.rs  waveform.rs
test/: audio_visualizer_player_method_channel_test.dart  audio_visualizer_player_test.dart  visualizer_player_controller_playlist_test.dart
windows/: CMakeLists.txt  audio_visualizer_player_plugin.cpp  audio_visualizer_player_plugin.h  audio_visualizer_player_plugin_c_api.cpp
windows/include/audio_visualizer_player/: audio_visualizer_player_plugin_c_api.h
windows/test/: audio_visualizer_player_plugin_test.cpp
