[package]
name = "audio_visualizer_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
anyhow = "1.0.102"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
rodio = { version = "0.22.1", default-features = true, features = ["symphonia-all"] }
symphonia = { version = "0.5.5", features = ["all"] }

realfft = { path = "realfft" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
